--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -577,6 +577,10 @@
   background-size: cover;
 }
 
+button:focus {
+  outline: none;
+}
+
 // Accordion
 .products-accordion-container {
   width: 60%;
